--- a/test.yml
+++ b/test.yml
@@ -1,5 +1,5 @@
 - hosts: all
   tasks:
     - uri:
-        url: "http://localhost:8080/sample"
+        url: http://localhost:8080/sample
         status_code: 200
